Reader Sessions GET & POST routes functional
